--- a/style.css
+++ b/style.css
@@ -3,4 +3,9 @@
     padding: 0;
     font-family: sans-serif;
     box-sizing: border-box;
+    text-decoration: none;
+}
+
+html{
+    font-size: 65%;
 }
