--- a/style.css
+++ b/style.css
@@ -9,6 +9,19 @@
 html{
     font-size: 65%;
 }
+:root{
+    --red:#e74c3c;
+    --orange:#f39c12;
+    --purple: #A020F0;
+    --black:#34495e;
+    --white:#fff;
+    --blue: #0000ffff;
+    --light-color:#999;
+    --light-bg:#f5f5f5;
+    --border:.2rem solid var(--black);
+    --box-shadow:#0 .1rem .5rem rgba(0,0,0,.1);
+    --green:#27ae60;
+ }
 
 ::selection{
     background-color: orange;
